<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2-orca</name>
  <version>0.0.0</version>
  <description>Ros2 wrapper of ORCA module</description>
  <maintainer email="doguyeke@gmail.com">eastwest</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>px4_msgs</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
